# CrowPanel-2.8-ESP32-HMI-320x240

./: readme.md
Eagle_SCH&PCB/: CrowPanel ESP32 Display-2.8-V2.1-20240314.brd  CrowPanel ESP32 Display-2.8-V2.1-20240314.sch
example/: readme.md
example/Arduino/2.8inch_Squareline_Demo/: 2.8inch_Squareline_Demo.ino
example/Arduino/Arduino_Tutorial_28/: readme.md
example/Arduino/Arduino_Tutorial_28/LVGL_Arduino2.8/: LVGL_Arduino2.8.ino
example/Arduino/Arduino_Tutorial_28/libraries/: UI-2.8-BLUE.rar
example/Arduino/Arduino_Tutorial_28/libraries/UI/: ui.c  ui.h  ui_img_crowpanel_ui_bj_dis04028h_png.c
example/Arduino/Arduino_Tutorial_28/squareline_example/: squareline_example.ino
example/ESP_IDF/2.8/2.8 PROJECT/: CMakeLists.txt  sdkconfig  sdkconfig.old
example/ESP_IDF/2.8/2.8 PROJECT/components/UI/: CMakeLists.txt  ui.c  ui.h
example/ESP_IDF/2.8/2.8 PROJECT/main/: CMakeLists.txt  WZ2432R028.cpp
example/ESP_IDF/CrowPanel_ESP32_2.8/: CMakeLists.txt  Makefile  sdkconfig
example/ESP_IDF/CrowPanel_ESP32_2.8/components/UI/: ui.c  ui.h
example/ESP_IDF/CrowPanel_ESP32_2.8/main/: CMakeLists.txt  CrowPanel_ESP32_2.8.cpp
example/Micropython/ESP32-2.8-MicroPython-Code/DHT20&LED_LVGL_Demo/: CrowPanel_Esp32_2.8.py
example/Micropython/ESP32-2.8-MicroPython-Code/GPIO_Example/: biaopan-2.8.py  button-1-2.8.py  light.py  test.py  uart.py
example/PlatformIO/CrowPanel_ESP32_2.8/src/: main.cpp
factory_sourecode/: readme.md
factory_sourecode/HMI-2.8/LVGL_Arduino2.8RTP-CeShi-Hor/: LVGL_Arduino2.8RTP-CeShi-Hor.ino
(+4 files in other folders)
